--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">NY Times Scraper</a>
+      <a class="navbar-brand" href="/">Fox News Scraper</a>
     </div><!-- /.navbar-header -->
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Latest Headlines</a></li>
@@ -17,8 +17,8 @@
   <div class="background-image">
   </div>
   <div class="caption">
-    <h1>New York Times Headline Scraper</h1>
-    <h3>Articles from the The NY Times</h3>
+    <h1>Fox News Headline Scraper</h1>
+    <h3>Articles from the Fox News</h3>
   </div>
 </div>
 <div class="container-fluid article-container">
@@ -26,7 +26,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p>The NY Times Mongo Scraper</p>
+    <p>The Fox News Mongo Scraper</p>
   </div>
 </footer>
 
