--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">NY Times Scraper</a>
+      <a class="navbar-brand" href="/">Fox News Scraper</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="/">Latest Headlines</a></li>
@@ -24,7 +24,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p>The NY Times Mongo Scraper</p>
+    <p>The Fox News Mongo Scraper</p>
   </div>
 </footer>
 
