--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,6 +8,7 @@
       <li><a href="/saved">Saved Articles</a></li>
     </ul>
       <a class="btn btn-primary navbar-btn scrape-new">SCRAPE NEW ARTICLES</a>
+      <a class="btn btn-primary navbar-btn clear-articles">CLEAR ARTICLES</a>
     
   </div>
 </nav>
