--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="/">Fox News Scraper</a>
     </div><!-- /.navbar-header -->
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Latest Headlines</a></li>
+      <li class="active"><a href="/">Home</a></li>
       <li><a href="/saved">Saved Articles</a></li>
     </ul>
       <a class="btn btn-primary navbar-btn scrape-new">SCRAPE NEW ARTICLES</a>
