--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <!-- TITLE & FAVICON -->
-	<title>Vanila Times Headlines</title>
+	<title>New York Times Headlines</title>
 	<link rel="icon" type="image/png" href="https://intense-dusk-97090.herokuapp.com/favicon.png">
 <!-- GENERAL META -->
 	<meta charset="UTF-8">
